--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
     
     <form id="container">
         <div class="mb-3">
-          <label for="questionC" class="form-label">Cantidad de preguntas</label>
+          <label for="questionC" class="form-label">Number of questions</label>
           <input value="10" min="1" max="50" type="number" class="form-control" id="questionC" aria-describedby="emailHelp" required>
         </div>
         <div class="mb-3">
-          <label for="categories" class="form-label">Categorias</label>
+          <label for="categories" class="form-label">Category</label>
           <select name="categories" class="form-control" id="categories">
-            <option value="select-categories">Seleccione la categoria</option>  
+            <option value="select-categories">Select category</option>  
 
           </select>
         </div>
         <div class="mb-3">
-            <label for="types" class="form-label">Tipo de preguntas</label>
+            <label for="types" class="form-label">Type of question</label>
             <select name="types" class="form-control" id="types">
-              <option value="select-types">Seleccione el tipo de preguntas</option>
-                <option value="boolean">Verdadero o falso</option>
-                <option value="multiple">Seleccion multiple</option>
+              <option value="select-types">Select the type of questions</option>
+                <option value="boolean">True or false</option>
+                <option value="multiple">Multiple choice</option>
             </select>
         </div>
         <div class="mb-3">
-          <label for="difficulty" class="form-label">Dificultad</label>
+          <label for="difficulty" class="form-label">Difficulty</label>
           <select name="difficulty" class="form-control" id="difficulty">
-            <option value="select-difficulty">Seleccione la dificultad</option>
-              <option value="easy">Facil</option>
+            <option value="select-difficulty">Select difficulty</option>
+              <option value="easy">Easy</option>
               <option value="medium">Medium</option>
               <option value="hard">Hard</option>
           </select>
       </div>
-        <button class="btn btn-primary">Generar preguntas</button>
+        <button class="btn btn-primary">Generate questions</button>
       </form>
 
       <form id="container-Questions" class="question">
